// Reverse-engineered Extension Server proto definition
// Based on: exa.extension_server_pb.ExtensionServerService
// Source: language_server_linux_x64 binary strings + extension.js analysis

syntax = "proto3";

package exa.extension_server_pb;

import "google/protobuf/empty.proto";

// Minimal unified_state_sync messages
message Topic {
  map<string, string> data = 1;
}

message Row {
  string key = 1;
  string value = 2;
}

message AppliedUpdate {
  repeated Row updated_rows = 1;
  repeated string deleted_keys = 2;
}

message UpdateRequest {
  string topic = 1;
  AppliedUpdate update = 2;
}

// Extension Server messages
message SubscribeToUnifiedStateSyncTopicRequest {
  string topic = 1;
}

message UnifiedStateSyncUpdate {
  oneof update_type {
    Topic initial_state = 1;
    AppliedUpdate applied_update = 2;
  }
}

message PushUnifiedStateSyncUpdateRequest {
  UpdateRequest update = 1;
}

message PushUnifiedStateSyncUpdateResponse {}

message LanguageServerStartedRequest {}
message LanguageServerStartedResponse {}

message RecordErrorRequest {
  string error = 1;
  string stack_trace = 2;
}
message RecordErrorResponse {}

// Cascade edit messages (stub)
message WriteCascadeEditRequest {
  bytes data = 1;
}
message WriteCascadeEditResponse {}

// Minimal service definition - only what LS needs
service ExtensionServerService {
  // Critical: LS calls this to subscribe to state updates (OAuth token)
  rpc SubscribeToUnifiedStateSyncTopic(SubscribeToUnifiedStateSyncTopicRequest) 
      returns (stream UnifiedStateSyncUpdate);
  
  // LS calls this to push state updates
  rpc PushUnifiedStateSyncUpdate(PushUnifiedStateSyncUpdateRequest) 
      returns (PushUnifiedStateSyncUpdateResponse);
  
  // LS calls this on startup
  rpc LanguageServerStarted(LanguageServerStartedRequest) 
      returns (LanguageServerStartedResponse);
  
  // LS calls this to report errors
  rpc RecordError(RecordErrorRequest) returns (RecordErrorResponse);
}
